# unitreemotor

./: CMakeLists.txt  ConfigPanel.h  DashboardPanel.cpp  MainFrame.h  MyApp.cpp
core/: CMakeLists.txt
core/include/: commandEvent.h  coreThread.h  serial_initalize.h  unitreeMotor.h  unitreeMotorGom.h
core/src/: coreThread.cpp  serial_initalize.cpp  unitreeMotorGom.c
core/test/: coreTest.cpp  crcTest.cpp  dataGomTest.cpp
gui/: CMakeLists.txt  ConfigPanel.cpp  DashboardPanel.h  MainFrame.cpp  MainFrame.h  MyApp.cpp
gui/include/: MainFrame.h  commandEvent.h  motorBackend.h
gui/src/: ConfigPanel.cpp  DashboardPanel.cpp  MainFrame.cpp  MyApp.cpp  motorBackend.cpp
